--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-16x16.png" />
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/logo-desktop.svg" />
+    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/logo-desktop.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
